// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Notification/Banner Error Banner 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-jSgupP lhiIpA sc-banner"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <div
      className="sc-gKsewC ehdtkM"
    >
      <div
        className="sc-fubCfw fwuLbz"
      >
        Error
      </div>
      <span
        className="sc-iBPRYJ iXJrlv"
      >
        There is an error.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Notification/Banner Playground 1`] = `
<div
  className="sc-jSgupP grPkbY sc-banner"
>
  <i
    className="fas fa-exclamation-triangle"
  />
  <div
    className="sc-gKsewC ehdtkM"
  >
    <div
      className="sc-fubCfw fwuLbz"
    >
      Man
    </div>
    <span
      className="sc-iBPRYJ iXJrlv"
    >
      There is a success
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Notification/Banner Success Banner 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-jSgupP grPkbY sc-banner"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <div
      className="sc-gKsewC ehdtkM"
    >
      <div
        className="sc-fubCfw fwuLbz"
      >
        Success
      </div>
      <span
        className="sc-iBPRYJ iXJrlv"
      >
        There is a success.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Notification/Banner Warning Banner 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-jSgupP dTlNXc sc-banner"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <div
      className="sc-gKsewC ehdtkM"
    >
      <div
        className="sc-fubCfw fwuLbz"
      >
        Warning
      </div>
      <span
        className="sc-iBPRYJ iXJrlv"
      >
        There is a warning.
      </span>
    </div>
  </div>
</div>
`;
